# dianying-os

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_RESULT.md  CLAUDE_TODO.md  CONTRIBUTING.md  LICENSE  LINK_CHECK_REPORT.md  QUICK_START.md  README.md  README_MVP.md  RESPONSIVE_REPORT.md  WAIC_DEMO_SCRIPT.md  admin.html  admin.html.bak  agent-payment.html  agent.html  ai-demo.html  architecture.html  check.js  check_func.js  cli-demo.html  dashboard-bi.html  dashboard-merchant.html  dashboard-platform.html  dashboard.html  docker-compose.yml  find_braces.js  find_syntax.js  frontend-optimization-result.md  index.html  login.html  merchant-payment.html  merchant.html  nginx.conf  platform-payment.html  platform.html  server.js  start-dev.sh  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml
api/: __init__.py  api_proxy.py  database.py  main.py  requirements.txt  seed.py  server.py
api/admin/: __init__.py  agents.py  ai_routes.py  analytics.py  channel.py  content.py  customer.py  finance.py  llm_config.py  merchants.py  payment.py  payment_routes.py  product.py  router.py  sales.py  security.py  settings.py  support.py
api/generators/: __init__.py  poster_generator.py
api/models/: __init__.py
assets/data/: china-geo.js
backend/: Dockerfile  config.py  database.py  init_db.py  main.py  models.py  requirements.txt
backend/routes/: __init__.py  auth.py  merchants.py  notify.py  reviews.py  stats.py  stores.py
cli/dyos/: README.md  __main__.py  cli.py  pyproject.toml  setup.py
cli/dyos-payment/: README.md  init_config.py  pyproject.toml  setup.py
cli/dyos-payment/dyos_payment/: __init__.py  __main__.py  cli.py  client.py  config.py  crypto.py
cli/dyos-payment/dyos_payment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/dyos-payment/dyos_payment/core/: __init__.py  merchant.py  payment.py  reconcile.py  settle.py  split.py  transfer.py
cli/dyos-payment/dyos_payment/utils/: __init__.py  output.py  repl_skin.py
cli/dyos-platforms/: PLATFORMS_GUIDE.md  README.md  pyproject.toml  setup.py
cli/dyos-platforms/dyos_platforms/: __init__.py  __main__.py  cli.py  config.py
cli/dyos-platforms/dyos_platforms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/dyos-platforms/dyos_platforms/core/: __init__.py  alipay.py  amap.py  baidu.py  base.py  douyin.py  eleme.py  meituan.py  wechat.py  xiaohongshu.py
cli/dyos-platforms/dyos_platforms/mock/: __init__.py  data.py
cli/dyos-platforms/dyos_platforms/utils/: __init__.py  api_client.py  auth.py  output.py  repl_skin.py
cli/dyos/core/: channel.py  finance.py  merchant.py  sales.py
cli/dyos/dyos/: __init__.py  config.py
cli/dyos/dyos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/dyos/dyos/core/: __init__.py  agent.py  analytics.py  customer.py  payment.py  product.py  security.py  settings.py  support.py
cli/dyos/dyos/utils/: __init__.py  output.py
cli/dyos/utils/: api_client.py
config/: store-config.json
css/: admin.css  ai-demo.css  dashboard-dataease.css  landing-mobile.css  login.css  mobile-responsive.css  responsive-enhanced.css  saas-style.css  style.css
docs/: API_INTEGRATION.md  README.md  ROADMAP.md  SECURITY.md  agent.html  api.md  architecture.md  demo-script.md  index.html  platform.html
docs/css/: style.css
docs/js/: app.js
docs/js/agents/: operate-agent.js  plan-agent.js  virtual-manager.js
docs/js/modules/: pricing-engine.js
js/: admin-api-enhance.js  admin-api.js  admin.js  admin.js.backup  app.js  app.js.backup_before_scope_fix  auth.js  interaction.js  mobile-menu.js
js/agents/: deliver-agent.js  insight-agent.js
js/modules/: admin-agent.js  admin-analytics.js  admin-content.js  admin-core.js  admin-customer.js  admin-finance.js  admin-merchant.js  admin-others.js  admin-payment.js  admin-sales.js  agent-app.js  knowledge-transfer.js  lifecycle-drive.js  merchant-app.js  merchant-init.js  platform-app.js
js/utils/: data-store.js
knowledge/: 动态定价策略.md  客户生命周期管理.md  客户话术库.md  差评回复模板.md  差评根因分析.md  竞品应对策略.md  营销活动策略.md  行业数据指标.md  门店诊断清单.md  门店运营SOP.md
prompts/: insight-agent.md  operate-agent.md  plan-agent.md  virtual-manager.md
src/js/: app.js
src/js/modules/: digital-twin.js  review-handler.js  store-clone.js
src/js/utils/: trust-level.js
test-screenshots/admin/: TEST_REPORT.md
