[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dyos-platforms"
version = "0.1.0"
description = "店赢OS - 8大本地生活平台统一CLI工具"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "店赢OS Team", email = "team@dianyingos.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
dyos-platform = "dyos_platforms.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dyos_platforms*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
